--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -1,17 +1,22 @@
 ﻿<!doctype html>
-<html ng-app="app">
+<html>
 
 <head>
     <meta charset="utf-8" />
     <script src="js/three.min.js"></script>
+	<script src="js/CSS3DRenderer.js"></script>
 	<script src="js/jquery-2.2.3.min.js"></script>
-	<script src="js/angular.min.js"></script>
-	<script src="js/index.js"></script>
-	<script src="js/DirectiveLoginBackground.js"></script>
+	<script src="js/ThreeLoginBackground.js"></script>
+	<link href="css/threeLoginBackground.css" rel="stylesheet">
 </head>
 
-<body ng-controller="IndexController">
-    <div directive-login-background width="1000" height="500"></div>
+<body>
+    <canvas width="800" height="800" id="canvas1"></canvas>
+
+	<script>
+		var bg = new ThreeLoginBackground($('#canvas1'));
+		bg.init();
+	</script>
 </body>
 
 </html>
