--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <script src="js/three.min.js"></script>
-	<script src="js/CSS3DRenderer.js"></script>
+	<!--<script src="js/CSS3DRenderer.js"></script>-->
 	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="js/ThreeLoginBackground.js"></script>
-	<link href="css/threeLoginBackground.css" rel="stylesheet">
+	<!--<link href="css/threeLoginBackground.css" rel="stylesheet">-->
 </head>
 
 <body>
