--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <canvas width="800" height="800" id="canvas1"></canvas>
+    <canvas width="800" height="800" style="background-image: url('img/bg.png');" id="canvas1"></canvas>
 
 	<script>
 		var bg = new ThreeLoginBackground($('#canvas1'));
