--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -8,10 +8,16 @@
 	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="js/ThreeLoginBackground.js"></script>
 	<!--<link href="css/threeLoginBackground.css" rel="stylesheet">-->
+	<style>
+		#canvas1 {
+			background: url(img/bg.png) center center;
+			background-size: 800px 800px;
+		}
+	</style>
 </head>
 
 <body>
-    <canvas width="800" height="800" style="background-image: url('img/bg.png');" id="canvas1"></canvas>
+    <canvas width="800" height="800" id="canvas1"></canvas>
 
 	<script>
 		var bg = new ThreeLoginBackground($('#canvas1'));
