--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -7,6 +7,7 @@
 	<!--<script src="js/CSS3DRenderer.js"></script>-->
 	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="js/ThreeLoginBackground.js"></script>
+	<script src="js/cuon-matrix.js"></script>
 	<!--<link href="css/threeLoginBackground.css" rel="stylesheet">-->
 	<style>
 		#canvas1 {
