--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <script src="js/three.min.js"></script>
-	<!--<script src="js/CSS3DRenderer.js"></script>-->
 	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="js/ThreeLoginBackground.js"></script>
 	<script src="js/cuon-matrix.js"></script>
-	<!--<link href="css/threeLoginBackground.css" rel="stylesheet">-->
 	<style>
 		.treeloginbackground {
 			background-color: #07112B;
 			text-align: center;
+			height: 1080px;
 		}
 		.canvas1 {
 			background: url(img/bg.png) center center no-repeat;
