--- a/ThreeLogin/index.html
+++ b/ThreeLogin/index.html
@@ -9,7 +9,7 @@
 	<script src="js/cuon-matrix.js"></script>
 	<style>
 		.treeloginbackground {
-			background-color: #07112B;
+			background-color: #0F1A4B;
 			text-align: center;
 			height: 1080px;
 		}
